added flowing header

--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
                             <div class="card">
                                 <div class="card-slider">
                                     <div class="card-slider__nav slider__nav">
-                                        <div class="slider__nav-item"><img src="src/images/slider/preview1.png" alt="">
+                                        <div class="slider__nav-item"><img src="src/images/slider/preview1.png" alt="preview1">
                                         </div>
-                                        <div class="slider__nav-item"><img src="src/images/slider/preview2.png" alt="">
+                                        <div class="slider__nav-item"><img src="src/images/slider/preview2.png" alt="preview2">
                                         </div>
-                                        <div class="slider__nav-item"><img src="src/images/slider/preview3.png" alt="">
+                                        <div class="slider__nav-item"><img src="src/images/slider/preview3.png" alt="preview3">
                                         </div>
-                                        <div class="slider__nav-item"><img src="src/images/slider/preview4.png" alt="">
+                                        <div class="slider__nav-item"><img src="src/images/slider/preview4.png" alt="preview4">
                                         </div>
-                                        <div class="slider__nav-item">
-                                            <img src="src/images/slider/preview5.png" alt="">
+                                        <div class="slider__nav-item"><img src="src/images/slider/preview5.png" alt="preview5">
                                         </div>
                                     </div>
                                     <div class="card-slider__block slider__block">
