--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                         <li class="nav-link"><img src="src/images/favorite.svg" alt="favaritelogo"></li>
                     </ul>
                 </nav>
+                <!-- burger -->
+                <ul class="nav__list" data-nav>
+                    <li class="nav__item"><a href="" class="nav__link">постельное белье</a></li>
+                    <li class="nav__item"><a href="" class="nav__link">одежда для дома</a></li>
+                    <li class="nav__item"><a href="" class="nav__link">Одежда для улицы</a></li> 
+                    <li class="nav__item"><a href="" class="nav__link">ВЫход</a></li>
+                </ul>
+                <button class="burger" data-burger aria-label="Open menu" aria-expanded="false">
+                    <span class="burger_line"></span>
+                </button>
             </section>
         </div>
     </header>
